tests/negative/test_sym_type_undef_arr.orb
data Foo;

fnc main () () {
    sym x:(Foo 2);
};